--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav nav-tabs nav-justified">
-                    <li class="navbar-text"><a href="#question_1">About</a></li>
-                    <li class="navbar-text"><a href="#question_2">Get it Done</a></li>
-                    <li class="navbar-text"><a href="#question_3">Download</a></li>
-                    <li class="navbar-text"><a href="#">Help Out</a></li>
+                    <li class="navbar-text"><a href="#question_1">ABOUT</a></li>
+                    <li class="navbar-text"><a href="#question_2">GET IT DONE</a></li>
+                    <li class="navbar-text"><a href="#question_3">DOWNLOAD</a></li>
+                    <li class="navbar-text"><a href="#">HELP OUT</a></li>
                 </ul>
             </div>
         </div>
@@ -57,7 +57,7 @@
 
         <div class="row" id="logo">
             <div class="col-lg-12">
-                <img class="img-responsive center-block" src="pics/Logo.png" style="width:50%"/>
+                <img class="img-responsive center-block" src="pics/Logo.png" style="width:30%"/>
             </div>
         </div>
 
@@ -77,12 +77,12 @@
         <!--Who is Jack?-->
         <div class="row question" id="question_1">
             <div class="col-lg-12">
-                <p class="qtext text-center">Q: Who is Jack?</p>
+                <p class="qtext text-center">Q: WHO IS JACK?</p>
             </div>
         </div>
         <div class="row answer" id="answer_1">
             <div class="col-lg-12">
-                <p class="atext text-center">A: Jack is who you call when you need a hand getting something done</p>
+                <p class="atext text-center">A: JACK IS WHO YOU CALL WHEN YOU NEED A HAND GETTING SOMETHING DONE</p>
             </div>
         </div>
 
@@ -99,12 +99,12 @@
         <!-- What can Jack do for me? -->
         <div class="row question" id="question_2">
             <div class="col-lg-12">
-                <p class="qtext text-center">Q: What can Jack do for me?</p>
+                <p class="qtext text-center">Q: WHAT CAN JACK DO FOR ME?</p>
             </div>
         </div>
         <div class="row answer" id="answer_2">
             <div class="col-lg-12">
-                <p class="atext text-center">A: Any simple task you'd ask a friend or personal assistant to help with</p>
+                <p class="atext text-center">A: ANY SIMPLE TASK YOU WOULD ASK A FRIEND OR PERSONAL ASSISTANT FOR HELP WITH</p>
             </div>
         </div>
         <div class="row content" id="content_2" >
@@ -198,12 +198,12 @@
         <!-- How Can I Get Jack?-->
         <div class="row question" id="question_3">
             <div class="col-lg-12">
-                <p class="qtext text-center">Q: How can I get Jack?</p>
+                <p class="qtext text-center">Q: HOW CAN I GET JACK?</p>
             </div>
         </div>
         <div class="row answer" id="answer_3">
             <div class="col-lg-12">
-                <p class="atext text-center">A: We build it!</p>
+                <p class="atext text-center">A: WE BUILD IT!</p>
             </div>
         </div>
         <div class="row content" id="content_3">
@@ -227,25 +227,39 @@
 
         <div class="row question" id="question_4">
             <div class="col-lg-12">
-                <p class="qtext text-center">Q: How can I help?</p>
+                <p class="qtext text-center">Q: HOW CAN I HELP?</p>
             </div>
         </div>
         <div class="row answer" id="answer_4">
             <div class="col-lg-12">
-                <p class="atext text-center">A: However you can.</p>
+                <p class="atext text-center">A: HOWEVER YOU CAN</p>
             </div>
         </div>
         <div class="row content" id="content_4">
-            <p class="ctext text-center">
-                Want to share your thoughts?</br>
-                Want to become a Jack?</br>
-                Want to invest?</br>
-                Want to help build the damned thing?</br>
-                Want to stay up to date?</br>
-                Fill in the blanks below to get started.
-            </p>
-        </div>
-        <div class="row question" id="question_5"></div>
-    </div>
+            <!--Forms-->
+            <form class="form-inline">
+                <div class="form-group">
+                    <label class="sr-only" for="Name">Name</label>
+                    <input type="text" class="form-control" id="Name" placeholder="Name">
+                </div>
+                <div class="form-group">
+                <label class="sr-only" for="Email">Email address</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email">
+                </div>
+                <label class="control-label">Want to</label>
+                <select class="form-control" >
+                    <option>share your thoughts?</option>
+                    <option>become a Jack?</option>
+                    <option>Want to stay up to date?</option>
+                    <option>help build the damned thing?</option>
+                    <option>invest?</option>
+                </select>
+             </form>
+            <div class="row">
+                <div class="col-lg-12"><textarea class="form-control" rows="3" placeholder="Share your thoughts"></textarea></div>
+            </div>
+</div>
+       <div class="row question" id="question_5"></div>
+     </div>
 </body>
 </html>
