--- a/calljack.html
+++ b/calljack.html
@@ -73,63 +73,63 @@
                             <label class="sr-only" for="Job Location">Job Location</label>
                             <input type="text" class="form-control" id="Name" placeholder="Job Location">
                         </div></br>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="input-group">
-                        </div>
-                    </div>
-                    <form class="form-inline">
-                        <div class="radio">
-                            <label>
-                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="General" checked>
-                                General Labor
-                            </label>
-                        </div>
-                        <div class="radio">
-                            <label>
-                                <input type="radio" name="optionsRadios" id="optionsRadios2" value="Cleaning">
-                                Cleaning & Organization
-                            </label>
-                        </div>
-                        <div class="radio disabled">
-                            <label>
-                                <input type="radio" name="optionsRadios" id="optionsRadios3" value="Personal" disabled>
-                                Personal Assistance
-                            </label>
-                        </div>
-                        <div class="radio disabled">
-                            <label>
-                                <input type="radio" name="optionsRadios" id="optionsRadios3" value="Errands" disabled>
-                                Errands
-                            </label>
-                        </div>
-                        <div class="radio disabled">
-                            <label>
-                                <input type="radio" name="optionsRadios" id="optionsRadios3" value="Roadside Assistance" disabled>
-                                Roadside Assistance
-                             </label>
-                        </div>
-                    </form>
-                        <!--<div class="row">-->
-            <!--<div class="col-lg-10 col-lg-offset-1">
-                <ul class="nav nav-tabs">
-                    <li role="presentation" class="active"><a href="#">General Labor</a></li>
-                    <li role="presentation"><a href="#">Cleaning & Organization</a></li>
-                    <li role="presentation"><a href="#">Personal Assistance</a></li>
-                    <li role="presentation"><a href="#">Errands</a></li>
-                    <li role="presentation"><a href="#">Roadside Assistance</a></li>
-                </ul>
-            </div>
-        </div>-->
-                    <div class="row">
                         <div class="row">
-                            <div class="col-lg-12"><textarea class="form-control" rows="5" placeholder="What can Jack do for you?"></textarea></div>
-                        </div>
+                            <div class="col-lg-12">
+                                <div class="input-group">
+                                </div>
+                            </div>
+                            <form class="form-inline">
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" name="optionsRadios" id="optionsRadios1" value="General" checked>
+                                        General Labor
+                                    </label>
+                                </div>
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" name="optionsRadios" id="optionsRadios2" value="Cleaning">
+                                        Cleaning & Organization
+                                    </label>
+                                </div>
+                                <div class="radio disabled">
+                                    <label>
+                                        <input type="radio" name="optionsRadios" id="optionsRadios3" value="Personal" disabled>
+                                        Personal Assistance
+                                    </label>
+                                </div>
+                                <div class="radio disabled">
+                                    <label>
+                                        <input type="radio" name="optionsRadios" id="optionsRadios3" value="Errands" disabled>
+                                        Errands
+                                    </label>
+                                </div>
+                                <div class="radio disabled">
+                                    <label>
+                                        <input type="radio" name="optionsRadios" id="optionsRadios3" value="Roadside Assistance" disabled>
+                                        Roadside Assistance
+                                    </label>
+                                </div>
+                            </form>
+                            <!--<div class="row">-->
+                            <!--<div class="col-lg-10 col-lg-offset-1">
+                                    <ul class="nav nav-tabs">
+                                        <li role="presentation" class="active"><a href="#">General Labor</a></li>
+                                        <li role="presentation"><a href="#">Cleaning & Organization</a></li>
+                                        <li role="presentation"><a href="#">Personal Assistance</a></li>
+                                        <li role="presentation"><a href="#">Errands</a></li>
+                                        <li role="presentation"><a href="#">Roadside Assistance</a></li>
+                                    </ul>
+                                </div>
+                            </div>-->
+                            <div class="row">
+                                <div class="row">
+                                    <div class="col-lg-12"><textarea class="form-control" rows="5" placeholder="What can Jack do for you?" maxlength="132"></textarea></div>
+                                </div>
 
-                    </div>
-                    <div>
-                        <input class="btn btn-default" type="submit" value="Get it Done">
-                    </div>
+                            </div>
+                            <div>
+                                <input class="btn btn-default" type="submit" value="Get it Done">
+                            </div>
                         </div><br />
 
                     </form>
