--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#behind_nav">
-                    <img alt="Brand" src="pics/j.png">
+                    <img alt="Brand" src="pics/J.png">
                 </a>
             </div>
 
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav nav-tabs nav-justified">
                     <li class="navbar-text"><a href="#question_1">ABOUT</a></li>
-                    <li class="navbar-text"><a href="#question_2">GET IT DONE</a></li>
+                    <li class="navbar-text"><a href="/calljack.html">GET IT DONE</a></li>
                     <li class="navbar-text"><a href="#question_3">DOWNLOAD</a></li>
                     <li class="navbar-text"><a href="#">HELP OUT</a></li>
                 </ul>
@@ -57,14 +57,14 @@
 
         <div class="row" id="logo">
             <div class="col-lg-12">
-                <img class="img-responsive center-block" src="pics/Logo.png" style="width:30%"/>
+                <img class="img-responsive center-block" src="pics/Logo.png" style="width:30%" />
             </div>
         </div>
 
         <!-- Get It Done Community-->
         <div class="row">
             <div class="col-lg-12">
-                <p class="qtext text-center" style="margin-bottom:-0.35em; text-shadow:none">THE GET IT DONE COMMUNITY</p>
+                <p class="qtext text-center" style="margin-bottom:-0.45em; text-shadow:none">THE GET IT DONE COMMUNITY</p>
             </div>
         </div>
 
@@ -87,11 +87,11 @@
         </div>
 
         <div class="row content" id="content_1">
-            <p class="ctext text-center" style="padding:40px 0px 0px 0px">
+            <p class="ctext text-center" style="padding-bottom:30px">
                 We are a service that connects customers with the growing pool of instantly </br>
                 available workers in the sharing economy for the immediate completion of simple tasks.
             </p>
-            <div class="col-lg-12" style="padding:40px">
+            <div class="col-lg-12">
                 <img class="img-responsive center-block" src="pics/Blueprint_Separate.png" />
             </div>
         </div>
@@ -107,44 +107,44 @@
                 <p class="atext text-center">A: ANY SIMPLE TASK YOU WOULD ASK A FRIEND OR PERSONAL ASSISTANT FOR HELP WITH</p>
             </div>
         </div>
-        <div class="row content" id="content_2" >
-            <p class="ctext text-center" style="padding:40px">
+        <div class="row content" id="content_2">
+            <p class="ctext text-center" style="padding-bottom:30px">
                 The right hand for every job
             </p>
-            
+
             <div id="carousel-example-generic" class="carousel slide center-block" data-ride="carousel" style="max-width:971px;">
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img src="pics/Chalkboard.png" alt="...">
+                        <img src="pics/General_Labor.png" alt="...">
                         <div class="carousel-caption">
                             <h3></h3>
                             <p></p>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="pics/Chalkboard.png" alt="...">
+                        <img src="pics/Cleaning.png" alt="...">
                         <div class="carousel-caption">
                             <h3></h3>
                             <p></p>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="pics/Chalkboard.png" alt="...">
+                        <img src="pics/Desk_Work.png" alt="...">
                         <div class="carousel-caption">
                             <h3></h3>
                             <p></p>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="pics/Chalkboard.png" alt="...">
+                        <img src="pics/Errands.png" alt="...">
                         <div class="carousel-caption">
                             <h3></h3>
                             <p></p>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="pics/Chalkboard.png" alt="...">
+                        <img src="pics/Roadside_Assistance.png" alt="...">
                         <div class="carousel-caption">
                             <h3></h3>
                             <p></p>
@@ -167,11 +167,10 @@
             <!-- Indicators -->
             <ol class="list-inline text-center">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active">
-                    <a id="carousel-selector-0">
+                    <a id="carousel-selector-0", class="selected">
                         <img class="img-responsive active" src="pics/selector_1.png" />
                     </a>
                 </li>
-                
                 <li data-target="#carousel-example-generic" data-slide-to="1">
                     <a id="carousel-selector-1">
                         <img class="img-responsive" src="pics/selector_2.png" />
@@ -219,7 +218,7 @@
                     Imagine the possibilities if this was a complete app<br />
                     Scores of people ready and willing to help<br />
                     Responsive in real time<br />
-                    Instantly Useful. 
+                    Instantly Useful.
                 </p>
             </div>
         </div>
@@ -238,28 +237,33 @@
         <div class="row content" id="content_4">
             <!--Forms-->
             <form class="form-inline">
+
                 <div class="form-group">
-                    <label class="sr-only" for="Name">Name</label>
+                    <label class="control-label" for="Name">Name</label>
                     <input type="text" class="form-control" id="Name" placeholder="Name">
                 </div>
+
                 <div class="form-group">
-                <label class="sr-only" for="Email">Email address</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email">
+                    <label class="control-label" for="Email">Email Address</label>
+                    <input type="email" class="form-control" id="email" placeholder="Enter email">
                 </div>
                 <label class="control-label">Want to</label>
-                <select class="form-control" >
+                <select class="form-control">
                     <option>share your thoughts?</option>
                     <option>become a Jack?</option>
                     <option>Want to stay up to date?</option>
                     <option>help build the damned thing?</option>
                     <option>invest?</option>
                 </select>
-             </form>
+            </form>
             <div class="row">
                 <div class="col-lg-12"><textarea class="form-control" rows="3" placeholder="Share your thoughts"></textarea></div>
             </div>
-</div>
-       <div class="row question" id="question_5"></div>
-     </div>
+            <div>
+                <input class="btn btn-default" type="submit" value="Get to know Jack">
+            </div>
+        </div>
+    <div class="row question" id="question_5"></div>
+    </div>
 </body>
 </html>
