--- a/calljack.html
+++ b/calljack.html
@@ -12,8 +12,6 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="js/bootstrap.js"></script>
 
-    <script src="js/jack.js"></script>
-
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/dependants/window_1200.css">
     <link rel="stylesheet" href="css/dependants/window_992.css">
@@ -33,17 +31,17 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#behind_nav">
-                    <img alt="Brand" src="pics/j.png">
+                    <img alt="Brand" src="pics/J.png">
                 </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav nav-tabs nav-justified">
-                    <li class="navbar-text"><a href="#question_1">ABOUT</a></li>
-                    <li class="navbar-text"><a href="#question_2">GET IT DONE</a></li>
-                    <li class="navbar-text"><a href="#question_3">DOWNLOAD</a></li>
-                    <li class="navbar-text"><a href="#">HELP OUT</a></li>
+                    <li class="navbar-text"><a href="/boot#question_1">ABOUT</a></li>
+                    <li class="navbar-text"><a href="/boot#question_2">GET IT DONE</a></li>
+                    <li class="navbar-text"><a href="/boot#question_3">DOWNLOAD</a></li>
+                    <li class="navbar-text"><a href="/boot#question_4">HELP OUT</a></li>
                 </ul>
             </div>
         </div>
