--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <li class="navbar-text"><a href="#question_1">ABOUT</a></li>
                     <li class="navbar-text"><a href="/calljack.html">GET IT DONE</a></li>
                     <li class="navbar-text"><a href="#question_3">DOWNLOAD</a></li>
-                    <li class="navbar-text"><a href="#">HELP OUT</a></li>
+                    <li class="navbar-text"><a href="#question_4">HELP OUT</a></li>
                 </ul>
             </div>
         </div>
