--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav nav-tabs nav-justified">
                     <li class="navbar-text"><a href="#question_1">ABOUT</a></li>
-                    <li class="navbar-text"><a href="/calljack.html">GET IT DONE</a></li>
+                    <li class="navbar-text"><a href="#question_2">GET IT DONE</a></li>
                     <li class="navbar-text"><a href="#question_3">DOWNLOAD</a></li>
                     <li class="navbar-text"><a href="#question_4">HELP OUT</a></li>
                 </ul>
@@ -116,40 +116,50 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img src="pics/General_Labor.png" alt="...">
+                        <a href="/boot/calljack.html">
+                            <img src="pics/General_Labor.png" alt="...">
+                        </a>
+                            <div class="carousel-caption">
+                                <h3></h3>
+                                <p></p>
+                            </div>
+</div>
+                    <div class="item">
+                        <a href="/boot/calljack.html">
+                            <img src="pics/Cleaning.png" alt="...">
+                        </a>
                         <div class="carousel-caption">
                             <h3></h3>
                             <p></p>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="pics/Cleaning.png" alt="...">
-                        <div class="carousel-caption">
-                            <h3></h3>
-                            <p></p>
-                        </div>
-                    </div>
+                        <a href="/boot/calljack.html">
+                            <img src="pics/Desk_Work.png" alt="...">
+                        </a>
+                            <div class="carousel-caption">
+                                <h3></h3>
+                                <p></p>
+                            </div>
+</div>
                     <div class="item">
-                        <img src="pics/Desk_Work.png" alt="...">
-                        <div class="carousel-caption">
-                            <h3></h3>
-                            <p></p>
-                        </div>
-                    </div>
+                        <a href="/boot/calljack.html">
+                            <img src="pics/Errands.png" alt="...">
+                        </a>
+                            <div class="carousel-caption">
+                                <h3></h3>
+                                <p></p>
+                            </div>
+</div>
                     <div class="item">
-                        <img src="pics/Errands.png" alt="...">
-                        <div class="carousel-caption">
-                            <h3></h3>
-                            <p></p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="pics/Roadside_Assistance.png" alt="...">
-                        <div class="carousel-caption">
-                            <h3></h3>
-                            <p></p>
-                        </div>
-                    </div>
+                        <a href="/boot/calljack.html">
+                            <img src="pics/Roadside_Assistance.png" alt="...">
+                        </a>
+                            <div class="carousel-caption">
+                                <h3></h3>
+                                <p></p>
+                            </div>
+</div>
                 </div>
 
 
@@ -212,7 +222,7 @@
                     For the time being, if you have a task:
                 </p>
 
-                <p class="qtext text-center"><a href="#">Get It Done</a></p>
+                <p class="qtext text-center"><a href="/boot/calljack.html">Get It Done</a></p>
 
                 <p class="ctext text-center">
                     Imagine the possibilities if this was a complete app<br />
